# CloudSky

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  addgamefragment.cpp  addgamefragment.h  basefragment.cpp  basefragment.h  basescreenfactory.cpp  basescreenfactory.h  gamefragment.cpp  gamefragment.h  loginfragment.cpp  loginfragment.h  mainfragment.cpp  mainfragment.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  navigator.cpp  navigator.h  new  ololo.sh  opengamefragment.cpp  opengamefragment.h  registerfragment.cpp  registerfragment.h  screenfactory.cpp  screenfactory.h  settingsfragment.cpp  settingsfragment.h  startfragment.cpp  startfragment.h
CloudSky_client/: CMakeLists.txt  main.cpp
CloudSky_client/include/: AudioStreamDecoder.h  VideoStreamDecoder.h
CloudSky_client/src/: AudioStreamDecoder.cpp  VideoStreamDecoder.cpp
CloudSky_client/tests/: CMakeLists.txt  tests.cpp
CloudSky_server/: CMakeLists.txt  main.cpp
CloudSky_server/include/: ScreenRecorder.h  SoundComponent.h  VideoComponent.h
CloudSky_server/src/: ScreenRecorder.cpp
CloudSky_server/tests/: CMakeLists.txt  tests.cpp
DataBase/: CMakeLists.txt  notesCloudSkyDB.txt  notesDB.txt
DataBase/include/: DataBaseOperations.h
DataBase/project/lib/dbOperations/: CMakeLists.txt
DataBase/project/src/: Makefile  pq_connect_ex  pq_connect_ex.cpp  pq_connect_ex2  pq_connect_ex2.cpp  serverDB  serverDB.cpp
DataBase/src/: DataBaseOperations.cpp
DataBase/tests/: DB_tests.cpp
ProtobufMessage/: .gitignore  CMakeLists.txt
ProtobufMessage/project/: build.sh
ProtobufMessage/project/lib/dbOperations/: CMakeLists.txt  notesDB.txt
ProtobufMessage/project/lib/emulation/: CMakeLists.txt
ProtobufMessage/project/lib/protobufOperations/: CMakeLists.txt
ProtobufMessage/project/src/: KeyboardMouseMessage.proto  OperationEmulation.cpp  SendReceiveMessage.cpp  emulate.cpp  sendReceiveMessage.cpp  serverDB.cpp
ProtobufMessage/project/tests/: EmulateInteractionTest.cpp  MessageTest.cpp  emulateInteractionTest.cpp  emulateTest.cpp  protobufTest.cpp  sendReceiveMessageTest.cpp  serverDBTest.cpp
client/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
client/include/: MessageOperations.h
client/lib/ClientConnection/: CMakeLists.txt
client/lib/ClientConnection/include/: TCPClientSocket.h  UDPClientSocket.h
client/lib/ClientConnection/src/: TCPClientSocket.cpp  UDPClientSocket.cpp
client/lib/TCPClient/: CMakeLists.txt
client/lib/TCPClient/include/: TCPClientSocket.h  UDPClientSocket.h
client/lib/TCPClient/src/: TCPClientSocket.cpp  UDPClientSocket.cpp
client/lib/clientConnection/: CMakeLists.txt
client/lib/clientConnection/include/: TCPClientSocket.h  constants.h
client/lib/clientConnection/src/: TCPClientSocket.cpp  UDPClientSocket.cpp
client/lib/dbOperations/: CMakeLists.txt  notesDB.txt
client/lib/dbOperations/include/: dbOperations.h
client/lib/dbOperations/src/: dbMessages.proto  dbOperations.cpp
client/lib/protobufOperations/: CMakeLists.txt
client/lib/protobufOperations/include/: KeyboardMouseMessage.pb.h  messageOperations.h
client/lib/protobufOperations/src/: KeyboardMouseMessage.pb.cc  messageOperations.cpp  mouseMove.cpp
client/lib/protobufOperationsOld/: CMakeLists.txt
client/lib/protobufOperationsOld/include/: messageOperations.h
client/lib/protobufOperationsOld/src/: messageOperations.cpp
client/lib/ui/: CMakeLists.txt
client/lib/ui/include/: SDLWidget.h  addGameFragment.h  authFragment.h  baseFragment.h  fragmentThemeStyle.h  gameFragment.h  mainwindow.h  navigator.h  regFragment.h  screenNames.h  screensFactory.h  startFragment.h
client/lib/ui/src/: SDLWidget.cpp  addGameFragment.cpp  authFragment.cpp  baseFragment.cpp  gameFragment.cpp  mainFragment.cpp  mainwindow.cpp  navigator.cpp  openGameFragment.cpp  regFragment.cpp  screensFactory.cpp  startFragment.cpp
client/lib/uiAlmostOld/include/: gameFragment.h
client/lib/uiAlmostOld/src/: gameFragment.cpp
client/lib/uiOld/: CMakeLists.txt
client/src/: main.cpp
client/tests/testClientConnection/: CMakeLists.txt
client/tests/testClientConnection/include/: createFilesToSend.h
client/tests/testClientConnection/src/: createFilesToSend.cpp  main.cpp
project/lib/ui/: CMakeLists.txt
project/lib/ui/include/: SDLWidget.h  (+14 more)
protobuf_message/: .gitignore  CMakeLists.txt  clang-format.clang  readme.txt  send_receive_message.cpp
protobuf_message/project/include/: MessageOperations.h  OperationEmulation.h  emulate_operations.h  message_operations.h
protobuf_message/project/src/: MessageOperations.cpp  OperationEmulation.cpp  SendReceiveMessage.cpp  emulate  keyboard_mouse_message.pb.cc  keyboard_mouse_message.proto  message_operations.cpp  send_receive_message.cpp
protobuf_message/project/tests/: EmulateInteractionTest.cpp  MessageTest.cpp  emulate_interaction_test.cpp  message_test.cpp
protocolClient/: CMakeLists.txt
protocolClient/include/: TCPClientSocket.h  TCPClientSocket.hpp  UDPClientSocket.hpp
protocolClient/src/: TCPClientSocket.cpp  UDPClientSocket.cpp  main.cpp
protocolClient/unit_tests/: CMakeLists.txt
server/: CMakeLists.txt  Dockerfile  dockerInfo.md
server/build_old/: CMakeCache.txt  CloudSky_MyServer  Makefile  cmake_install.cmake
server/include/: Interactions.h  Server.h  Server.hpp  TCPServerSocket.h  TCPServerSocket.hpp  constants.h
server/lib/ServerConnection/: CMakeLists.txt
server/lib/TCPServer/: CMakeLists.txt
server/lib/dbOperations/: CMakeLists.txt
server/src/: Server.cpp  TCPServerSocket.cpp  UDPServerSocket.cpp  main.cpp
server/unit_tests/: CMakeLists.txt
server/unit_tests/src/: serverTest.cpp
worker/: CMakeLists.txt  Dockerfile
worker/lib/VideoAudioOperations/: CMakeLists.txt
worker/lib/WorkerConnection/: CMakeLists.txt
worker/lib/emulation/: CMakeLists.txt
worker/lib/protobufOperations/: CMakeLists.txt
worker/lib/videoAudioOperations/: CMakeLists.txt
worker/lib/videoAudioOperationsOld/: CMakeLists.txt
worker/lib/workerConnection/: CMakeLists.txt
worker/src/: main.cpp
worker/tests/testWorkerConnection/: CMakeLists.txt
(+110 files in other folders)
